Fixed text align

--- a/Smartflanders/src/App.css
+++ b/Smartflanders/src/App.css
@@ -221,13 +221,6 @@ header .nav a:hover {
 ============================ */
 
 /*===========================
-  BUILDING - snippet
-  ============================ */
-.snippet {
-  text-align: center;
-}
-
-/*===========================
   SERVICE - form
 ============================ */
 .serviceform {
